test/Driver/swift-version-default.code
// RUN: %empty-directory(%t)
// RUN: %languagec_driver_plain -target %target-triple -module-cache-path %t -typecheck -Xfrontend -verify %s

// This test should be updated to match the expected default Codira version
// when languagec is invoked directly.
// It should /not/ follow the version specified when invoking lit, which means
// it can't use the %languagec_driver or %target-build-language substitutions.

#if language(>=3)
asdf // expected-error {{cannot find 'asdf' in scope}}
#else
jkl
#endif

#if language(>=3.1)
asdf // expected-error {{cannot find 'asdf' in scope}}
#else
jkl
#endif

#if language(>=4)
aoeu // expected-error {{cannot find 'aoeu' in scope}}
#else
htn 
#endif

#if language(>=4.1)
aoeu // expected-error {{cannot find 'aoeu' in scope}}
#else
htn 
#endif

#if language(>=4.2)
aoeu // expected-error {{cannot find 'aoeu' in scope}}
#else
htn 
#endif

#if language(>=5)
aoeu // expected-error {{cannot find 'aoeu' in scope}}
#else
htn 
#endif

#if language(>=6)
aoeu
#else
htn // expected-error {{cannot find 'htn' in scope}}
#endif
